--- a/example/index.html
+++ b/example/index.html
@@ -225,7 +225,7 @@
                 });
 
             }else{
-                ele.textContent = ``;
+                ele.innerHTML = ``;
             }
             
         });
